# MediNote-AI

./: README.md  app.py  pyproject.toml  requirements.txt  utils.py
core/: combiner.py  medical_summarizer.py  sentiment_analyzer.py  soap_generator.py
frontend/static/: script.js  style.css
frontend/templates/: index.html
